// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default transpiler 1`] = `
""no-ctrl";

var $M = require("../../../api"),
  $iterator = $M.iterator,
  $iterFin = $M.iterFin,
  $x = $M.context,
  $ret = $M.ret,
  $unhandled = $M.unhandled,
  $raise = $M.raise,
  $brk = $M.brk,
  $force = $M.force,
  $mcall = $M.mcall,
  $m = $M.module("test/__fixtures__/transform/code.js", null, typeof module === "undefined" ? null : module, null, "$", {
    __webpack_require__: typeof __webpack_require__ !== "undefined" && __webpack_require__
  }, null),
  $s$1 = [{
    _require: [1, null],
    mod: [2, "1:8-1:11"],
    n: [3, "2:6-2:7"],
    k: [4, "3:6-3:7"],
    v0: [5, "7:4-7:6"],
    C: [6, "9:9-9:10"]
  }, null, 0],
  $s$2 = [{
    a: [1, "9:11-9:12"],
    v1: [2, "10:6-10:8"],
    v3: [4, "13:8-13:10"],
    i: [6, "18:13-18:14"],
    v4: [7, "19:8-19:10"]
  }, $s$1, 1],
  $s$3 = [{
    v2: [3, "12:10-12:12"]
  }, $s$2, 1],
  $s$4 = [{
    i: [5, "15:15-15:16"]
  }, $s$3, 1],
  $s$5 = [{
    e: [8, "20:11-20:12"]
  }, $s$2, 1],
  $s$6 = [{
    v5: [1, "26:8-26:10"]
  }, $s$1, 1],
  $m$0 = $M.fun("m$0", "code.js", null, null, [], 1, 7, "1:0-29:0", 32, function ($, $l, $p) {
    var $1;
    for (;;) switch ($.state = $.goto) {
      case 0:
        $l[6 /*C*/] = $m$1($);
        $.goto = 1;
        $brk();
        $.state = 1;
      case 1:
        $.goto = 2;
        $p = ($x.moduleId = require.resolve("mod"), $force(require("mod")));
        $.state = 2;
      case 2:
        $l[1 /*_require*/] = $p;
        $.goto = 3;
        $brk();
        $.state = 3;
      case 3:
        $l[2 /*mod*/] = $l[1 /*_require*/].mod;
        $.goto = 4;
        $brk();
        $.state = 4;
      case 4:
        $.goto = 5;
        $p = ($x.moduleId = require.resolve("mod2_" + $l[2 /*mod*/]), $force(require("mod2_" + $l[2 /*mod*/])));
        $.state = 5;
      case 5:
        $l[3 /*n*/] = $p;
        $.goto = 6;
        $brk();
        $.state = 6;
      case 6:
        $1 = $l[3 /*n*/].n;
        $.goto = 7;
        $p = ($x.moduleId = require.resolve("mod3_" + $1), $force(require("mod3_" + $1)));
        $.state = 7;
      case 7:
        $l[4 /*k*/] = $p;
        $.goto = 8;
        $brk();
        $.state = 8;
      case 8:
        $.goto = 9;
        ($x.call = $l[4 /*k*/])();
        $.state = 9;
      case 9:
        $.goto = 10;
        $brk();
        $.state = 10;
      case 10:
        $.goto = 11;
        ($x.call = $l[3 /*n*/])();
        $.state = 11;
      case 11:
        $.goto = 12;
        $brk();
        $.state = 12;
      case 12:
        $l[5 /*v0*/] = 10;
        $.goto = 13;
        $brk();
        $.state = 13;
      case 13:
        module.exports.fn2 = $m$2($);
        $.goto = 15;
        continue;
      case 14:
        $.goto = 15;
        return $unhandled($.error);
      case 15:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 0, [[4, "1:0-1:31", $s$1], [2, "1:16-1:30", $s$1], [4, "1:8-1:11", $s$1], [4, "2:0-2:33", $s$1], [2, "2:10-2:32", $s$1], [4, "3:0-3:33", $s$1], [2, "3:10-3:32", $s$1], [4, "4:0-4:4", $s$1], [2, "4:0-4:3", $s$1], [4, "5:0-5:4", $s$1], [2, "5:0-5:3", $s$1], [4, "7:0-7:12", $s$1], [4, "25:0-28:2", $s$1], [0, "25:0-28:1", $s$1], [16, "29:0-29:0", $s$1], [16, "29:0-29:0", $s$1]]),
  $m$1 = $M.fun("m$1", "C", null, $m$0, ["a"], 0, 12, "9:0-23:1", 0, function ($, $l, $p) {
    for (;;) switch ($.state = $.goto) {
      case 0:
        $.goto = 1;
        $brk();
        $.state = 1;
      case 1:
        $l[2 /*v1*/] = 10;
        $.goto = 2;
        $brk();
        $.state = 2;
      case 2:
        $.goto = 3;
        $brk();
        $.state = 3;
      case 3:
        $l[3 /*v2*/] = 11;
        $.goto = 4;
        $brk();
        $.state = 4;
      case 4:
        $.goto = 5;
        $brk();
        $.state = 5;
      case 5:
        $.goto = 6;
        $p = $mcall("fn1", $l[0][2 /*mod*/], $l[1 /*a*/]);
        $.state = 6;
      case 6:
        $.goto = 7;
        $mcall("proc1", $l[0][2 /*mod*/], $p, $l[0][5 /*v0*/], $l[2 /*v1*/], $l[3 /*v2*/], $l[4 /*v3*/]);
        $.state = 7;
      case 7:
        $.goto = 8;
        $brk();
        $.state = 8;
      case 8:
        $.goto = 9;
        $p = $iterator(something);
        $.state = 9;
      case 9:
        $l[11] = $p;
        $.state = 10;
      case 10:
        $.goto = 11;
        $brk();
        $.state = 11;
      case 11:
        $x.call = $l[11].next;
        $.goto = 12;
        $p = $l[11].next();
        $.state = 12;
      case 12:
        if ($p.done) {
          $.state = 13;
        } else {
          $.goto = 29;
          continue;
        }
      case 13:
        $.state = 14;
      case 14:
        $.goto = 15;
        $brk();
        $.state = 15;
      case 15:
        $.goto = 16;
        $p = $iterator(something);
        $.state = 16;
      case 16:
        $l[11] = $p;
        $.state = 17;
      case 17:
        $.goto = 18;
        $brk();
        $.state = 18;
      case 18:
        $x.call = $l[11].next;
        $.goto = 19;
        $p = $l[11].next();
        $.state = 19;
      case 19:
        if ($p.done) {
          $.state = 20;
        } else {
          $.goto = 24;
          continue;
        }
      case 20:
        $.state = 21;
      case 21:
        $.goto = 22;
        $brk();
        $.state = 22;
      case 22:
        $l[7 /*v4*/] = 100;
        $.goto = 23;
        $brk();
        $.state = 23;
      case 23:
        $.goto = 39;
        $brk();
        continue;
      case 24:
        $l[6 /*i*/] = $p.value;
        $.goto = 25;
        $brk();
        $.state = 25;
      case 25:
        $.goto = 17;
        $mcall("proc3", $l[0][2 /*mod*/], $l[6 /*i*/]);
        continue;
      case 26:
        return $raise($.error);
      case 27:
        $.goto = 28;
        $iterFin($l[11]);
        $.state = 28;
      case 28:
        $.goto = $l[10];
        continue;
      case 29:
        $l[5 /*i*/] = $p.value;
        $.goto = 30;
        $brk();
        $.state = 30;
      case 30:
        $.goto = 31;
        $mcall("proc2", $l[0][2 /*mod*/], $l[5 /*i*/]);
        $.state = 31;
      case 31:
        $.goto = 10;
        $brk();
        continue;
      case 32:
        return $raise($.error);
      case 33:
        $.goto = 34;
        $iterFin($l[11]);
        $.state = 34;
      case 34:
        $.goto = $l[9];
        continue;
      case 35:
        $l[8 /*e*/] = $.error;
        $.error = void 0;
        $.goto = 36;
        $brk();
        $.state = 36;
      case 36:
        $.goto = 37;
        $mcall("proc4", $l[0][2 /*mod*/], $l[8 /*e*/], $l[7 /*v4*/], $l[6 /*i*/]);
        $.state = 37;
      case 37:
        $.goto = 23;
        $brk();
        continue;
      case 38:
        $.goto = 39;
        return $unhandled($.error);
      case 39:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, function ($, $l) {
    switch ($.state) {
      case 31:
      case 30:
      case 29:
      case 13:
      case 12:
      case 11:
      case 10:
        $.goto = 33;
        $l[9] = 32;
        break;
      case 25:
      case 24:
      case 20:
      case 19:
      case 18:
      case 17:
        $.goto = 27;
        $l[10] = 26;
        break;
      case 34:
      case 33:
      case 32:
      case 28:
      case 27:
      case 26:
      case 22:
      case 21:
      case 16:
      case 15:
      case 14:
      case 9:
      case 8:
      case 7:
      case 6:
      case 5:
      case 4:
      case 3:
      case 2:
        $.goto = 35;
        break;
      default:
        $.goto = 38;
    }
  }, function ($, $l) {
    switch ($.state) {
      case 31:
      case 30:
      case 29:
      case 13:
      case 12:
      case 11:
      case 10:
        $l[9] = 39;
        $.goto = 33;
        break;
      case 25:
      case 24:
      case 20:
      case 19:
      case 18:
      case 17:
        $l[10] = 39;
        $.goto = 27;
        break;
      default:
        $.goto = 39;
        break;
    }
  }, 1, [[4, "10:2-10:14", $s$2], [4, "11:2-22:3", $s$2], [5, "12:4-12:18", $s$3], [5, "13:4-13:11", $s$3], [5, "14:4-14:42", $s$3], [3, "14:14-14:24", $s$3], [3, "14:4-14:41", $s$3], [5, "15:4-17:5", $s$3], [3, "15:20-15:29", $s$4], [1, null, $s$2], [5, "15:15-15:16", $s$4], [3, "15:20-15:29", $s$4], [1, null, $s$2], [1, null, $s$2], [5, "18:4-18:42", $s$3], [3, "18:18-18:27", $s$3], [1, null, $s$2], [5, "18:13-18:14", $s$3], [3, "18:18-18:27", $s$3], [1, null, $s$2], [1, null, $s$2], [5, "19:4-19:17", $s$3], [37, "20:3-20:3", $s$2], [36, "23:1-23:1", $s$2], [5, "18:29-18:42", $s$3], [3, "18:29-18:41", $s$3], [1, null, $s$2], [3, "18:18-18:27", $s$3], [1, null, $s$2], [5, "16:6-16:19", $s$4], [3, "16:6-16:18", $s$4], [37, "17:5-17:5", $s$2], [1, null, $s$2], [3, "15:20-15:29", $s$4], [1, null, $s$2], [4, "21:4-21:24", $s$5], [2, "21:4-21:23", $s$5], [36, "22:3-22:3", $s$2], [16, "23:1-23:1", $s$2], [16, "23:1-23:1", $s$2]]),
  $m$2 = $M.fun("m$2", "fn1", null, $m$0, [], 0, 3, "25:14-28:1", 0, function ($, $l, $p) {
    for (;;) switch ($.state = $.goto) {
      case 0:
        $.goto = 1;
        $brk();
        $.state = 1;
      case 1:
        $l[1 /*v5*/] = 10;
        $.goto = 2;
        $brk();
        $.state = 2;
      case 2:
        $.goto = 3;
        $p = $mcall("f2", $l[0][2 /*mod*/]);
        $.state = 3;
      case 3:
        $l[2] = $p;
        $.goto = 4;
        $p = new ($x.call = $l[0][6 /*C*/])($l[0][5 /*v0*/], $l[1 /*v5*/]);
        $.state = 4;
      case 4:
        $.goto = 5;
        $p = $mcall("some", $l[0][2 /*mod*/], {
          a: $l[2],
          b: [$p]
        });
        $.state = 5;
      case 5:
        $.result = $p;
        $.goto = 7;
        continue;
      case 6:
        $.goto = 7;
        return $unhandled($.error);
      case 7:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 1, [[4, "26:2-26:16", $s$6], [4, "27:2-27:55", $s$6], [2, "27:23-27:31", $s$6], [2, "27:37-27:50", $s$6], [2, "27:9-27:54", $s$6], [0, null, $s$6], [16, "28:1-28:1", $s$6], [16, "28:1-28:1", $s$6]]);
$M.moduleExports();"
`;

exports[`default transpiler 2`] = `
""no-ctrl";

var $M = require("../../../api"),
  $forInIterator = $M.forInIterator,
  $x = $M.context,
  $ret = $M.ret,
  $unhandled = $M.unhandled,
  $brk = $M.brk,
  $force = $M.force,
  $mcall = $M.mcall,
  $m = $M.module("test/__fixtures__/transform/mod1.js", null, typeof module === "undefined" ? null : module, null, "$", {
    __webpack_require__: typeof __webpack_require__ !== "undefined" && __webpack_require__
  }, null),
  $s$1 = [{
    M2: [1, null],
    _interopRequireWildcard: [2, null],
    j: [3, "3:4-3:5"],
    run: [4, "5:16-5:19"]
  }, null, 0],
  $s$2 = [{
    e: [1, null],
    t: [2, null],
    r: [3, null],
    n: [4, null]
  }, $s$1, 1],
  $s$3 = [{
    e: [1, null],
    t: [2, null],
    o: [3, null],
    i: [4, null],
    f: [5, null]
  }, $s$2, 2],
  $s$4 = [{
    t: [6, null]
  }, $s$3, 2],
  $s$5 = [{
    i: [1, "5:20-5:21"]
  }, $s$1, 1],
  $m$0 = $M.fun("m$0", "mod1.js", null, null, [], 0, 6, "1:0-14:0", 32, function ($, $l, $p) {
    for (;;) switch ($.state = $.goto) {
      case 0:
        $l[2 /*_interopRequireWildcard*/] = $m$1($);
        $l[4 /*run*/] = $m$3($);
        module.exports.__esModule = true;
        module.exports.run = $l[4 /*run*/];
        $.goto = 1;
        $brk();
        $.state = 1;
      case 1:
        $l[5] = $l[2 /*_interopRequireWildcard*/];
        $.goto = 2;
        $p = ($x.moduleId = require.resolve("./mod2"), $force(require("./mod2")));
        $.state = 2;
      case 2:
        $.goto = 3;
        $p = ($x.call = $l[5])($p);
        $.state = 3;
      case 3:
        $l[1 /*M2*/] = $p;
        $.goto = 4;
        $brk();
        $.state = 4;
      case 4:
        $l[3 /*j*/] = 0;
        $.goto = 5;
        $brk();
        $.state = 5;
      case 5:
        $.goto = 6;
        ($x.call = $l[4 /*run*/])();
        $.state = 6;
      case 6:
        $.goto = 7;
        $brk();
        $.state = 7;
      case 7:
        $.goto = 9;
        ($x.call = $l[4 /*run*/])();
        continue;
      case 8:
        $.goto = 9;
        return $unhandled($.error);
      case 9:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 0, [[4, "1:0-1:29", $s$1], [2, null, $s$1], [2, null, $s$1], [4, "3:0-3:10", $s$1], [4, "12:0-12:6", $s$1], [2, "12:0-12:5", $s$1], [4, "13:0-13:6", $s$1], [2, "13:0-13:5", $s$1], [16, "14:0-14:0", $s$1], [16, "14:0-14:0", $s$1]]),
  $m$1 = $M.fun("m$1", "_interopRequireWildcard", null, $m$0, ["e", "t"], 0, 5, null, 0, function ($, $l, $p) {
    for (;;) switch ($.state = $.goto) {
      case 0:
        if ("function" == typeof WeakMap) {
          $.state = 1;
        } else {
          $.goto = 4;
          continue;
        }
      case 1:
        $.goto = 2;
        $p = new ($x.call = WeakMap)();
        $.state = 2;
      case 2:
        $l[3 /*r*/] = $p;
        $.goto = 3;
        $p = new ($x.call = WeakMap)();
        $.state = 3;
      case 3:
        $l[4 /*n*/] = $p;
        $.state = 4;
      case 4:
        $.goto = 5;
        $p = ($x.call = $l[0][2 /*_interopRequireWildcard*/] = $m$2($))($l[1 /*e*/], $l[2 /*t*/]);
        $.state = 5;
      case 5:
        $.result = $p;
        $.goto = 7;
        continue;
      case 6:
        $.goto = 7;
        return $unhandled($.error);
      case 7:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 1, [[0, null, $s$2], [2, null, $s$2], [2, null, $s$2], [0, null, $s$2], [2, null, $s$2], [0, null, $s$2], [16, null, $s$2], [16, null, $s$2]]),
  $m$2 = $M.fun("m$2", null, null, $m$1, ["e", "t"], 1, 9, null, 0, function ($, $l, $p) {
    var $1;
    for (;;) switch ($.state = $.goto) {
      case 0:
        $1 = !$l[2 /*t*/];
        if ($1) {
          $.state = 1;
        } else {
          $.goto = 2;
          continue;
        }
      case 1:
        $1 = $l[1 /*e*/];
        $.state = 2;
      case 2:
        if ($1) {
          $.state = 3;
        } else {
          $.goto = 4;
          continue;
        }
      case 3:
        $1 = $l[1 /*e*/].__esModule;
        $.state = 4;
      case 4:
        if ($1) {
          $.state = 5;
        } else {
          $.goto = 6;
          continue;
        }
      case 5:
        $.result = $l[1 /*e*/];
        $.goto = 43;
        continue;
      case 6:
        $l[5 /*f*/] = {
          __proto__: null,
          default: $l[1 /*e*/]
        };
        $1 = null === $l[1 /*e*/];
        if ($1) {
          $.state = 7;
        } else {
          $.goto = 39;
          continue;
        }
      case 7:
        if ($1) {
          $.state = 8;
        } else {
          $.goto = 9;
          continue;
        }
      case 8:
        $.result = $l[5 /*f*/];
        $.goto = 43;
        continue;
      case 9:
        if ($l[2 /*t*/]) {
          $.state = 10;
        } else {
          $.goto = 38;
          continue;
        }
      case 10:
        $1 = $l[0][4 /*n*/];
        $.state = 11;
      case 11:
        if ($l[3 /*o*/] = $1) {
          $.state = 12;
        } else {
          $.goto = 17;
          continue;
        }
      case 12:
        $.goto = 13;
        $p = $mcall("has", $l[3 /*o*/], $l[1 /*e*/]);
        $.state = 13;
      case 13:
        if ($p) {
          $.state = 14;
        } else {
          $.goto = 16;
          continue;
        }
      case 14:
        $.goto = 15;
        $p = $mcall("get", $l[3 /*o*/], $l[1 /*e*/]);
        $.state = 15;
      case 15:
        $.result = $p;
        $.goto = 43;
        continue;
      case 16:
        $.goto = 17;
        $mcall("set", $l[3 /*o*/], $l[1 /*e*/], $l[5 /*f*/]);
        $.state = 17;
      case 17:
        $.goto = 18;
        $p = $forInIterator($l[1 /*e*/]);
        $.state = 18;
      case 18:
        $l[7] = $p;
        $.state = 19;
      case 19:
        $x.call = $l[7].next;
        $.goto = 20;
        $p = $l[7].next();
        $.state = 20;
      case 20:
        if ($p.done) {
          $.state = 21;
        } else {
          $.goto = 22;
          continue;
        }
      case 21:
        $.result = $l[5 /*f*/];
        $.goto = 43;
        continue;
      case 22:
        $l[6 /*t*/] = $p.value;
        $l[8] = "default" !== $l[6 /*t*/];
        if ($l[8]) {
          $.state = 23;
        } else {
          $.goto = 25;
          continue;
        }
      case 23:
        $.goto = 24;
        $p = $mcall("call", {}.hasOwnProperty, $l[1 /*e*/], $l[6 /*t*/]);
        $.state = 24;
      case 24:
        $l[8] = $p;
        $.state = 25;
      case 25:
        if ($l[8]) {
          $.state = 26;
        } else {
          $.goto = 37;
          continue;
        }
      case 26:
        $l[8] = $l[3 /*o*/] = Object.defineProperty;
        if ($l[8]) {
          $.state = 27;
        } else {
          $.goto = 29;
          continue;
        }
      case 27:
        $.goto = 28;
        $p = $mcall("getOwnPropertyDescriptor", Object, $l[1 /*e*/], $l[6 /*t*/]);
        $.state = 28;
      case 28:
        $l[8] = $p;
        $.state = 29;
      case 29:
        $1 = $l[4 /*i*/] = $l[8];
        if ($1) {
          $.state = 30;
        } else {
          $.goto = 33;
          continue;
        }
      case 30:
        $1 = $l[4 /*i*/].get;
        if ($1) {
          $.state = 31;
        } else {
          $.goto = 32;
          continue;
        }
      case 31:
        $.goto = 33;
        continue;
      case 32:
        $1 = $l[4 /*i*/].set;
        $.goto = 31;
        continue;
      case 33:
        if ($1) {
          $.state = 34;
        } else {
          $.goto = 36;
          continue;
        }
      case 34:
        $.goto = 35;
        ($x.call = $l[3 /*o*/])($l[5 /*f*/], $l[6 /*t*/], $l[4 /*i*/]);
        $.state = 35;
      case 35:
        $.goto = 37;
        continue;
      case 36:
        $l[5 /*f*/][$l[6 /*t*/]] = $l[1 /*e*/][$l[6 /*t*/]];
        $.goto = 35;
        continue;
      case 37:
        $.goto = 19;
        continue;
      case 38:
        $1 = $l[0][3 /*r*/];
        $.goto = 11;
        continue;
      case 39:
        $1 = "object" != typeof $l[1 /*e*/];
        if ($1) {
          $.state = 40;
        } else {
          $.goto = 41;
          continue;
        }
      case 40:
        $1 = "function" != typeof $l[1 /*e*/];
        $.state = 41;
      case 41:
        $.goto = 7;
        continue;
      case 42:
        $.goto = 43;
        return $unhandled($.error);
      case 43:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 2, [[0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [2, null, $s$3], [0, null, $s$3], [2, null, $s$3], [0, null, $s$3], [2, null, $s$3], [2, null, $s$4], [0, null, $s$3], [2, null, $s$4], [0, null, $s$3], [0, null, $s$3], [0, null, $s$4], [2, null, $s$4], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [2, null, $s$4], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [2, null, $s$4], [0, null, $s$3], [0, null, $s$4], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [0, null, $s$3], [16, null, $s$3], [16, null, $s$3]]),
  $m$3 = $M.fun("m$3", "run", null, $m$0, ["i"], 1, 2, "5:7-10:1", 0, function ($, $l, $p) {
    var $1;
    for (;;) switch ($.state = $.goto) {
      case 0:
        $.goto = 1;
        $brk();
        $.state = 1;
      case 1:
        if ($l[1 /*i*/] === void 0) {
          $.state = 2;
        } else {
          $.goto = 4;
          continue;
        }
      case 2:
        $.goto = 3;
        $brk();
        $.state = 3;
      case 3:
        $l[1 /*i*/] = 1;
        $.state = 4;
      case 4:
        $.goto = 5;
        $brk();
        $.state = 5;
      case 5:
        $l[0][3 /*j*/] = $l[0][3 /*j*/] + $l[1 /*i*/];
        $.goto = 6;
        $brk();
        $.state = 6;
      case 6:
        $1 = $l[1 /*i*/];
        $l[1 /*i*/] = $1 + 1;
        $.goto = 7;
        $p = $mcall("f1", $l[0][1 /*M2*/], $1);
        $.state = 7;
      case 7:
        $.goto = 8;
        $mcall("f2", $l[0][1 /*M2*/], $p, $l[1 /*i*/]);
        $.state = 8;
      case 8:
        $.goto = 9;
        $brk();
        $.state = 9;
      case 9:
        $l[0][3 /*j*/] = $l[0][3 /*j*/] + $l[1 /*i*/];
        $.goto = 10;
        $brk();
        $.state = 10;
      case 10:
        $.goto = 11;
        $mcall("log", console, \`i:\${$l[1 /*i*/]},j:\${$l[0][3 /*j*/]}\`);
        $.state = 11;
      case 11:
        $.goto = 13;
        $brk();
        continue;
      case 12:
        $.goto = 13;
        return $unhandled($.error);
      case 13:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 1, [[4, "5:20-5:25", $s$5], [0, null, $s$5], [4, "5:20-5:25", $s$5], [0, null, $s$5], [4, "6:2-6:9", $s$5], [4, "7:2-7:23", $s$5], [2, "7:8-7:18", $s$5], [2, "7:2-7:22", $s$5], [4, "8:2-8:9", $s$5], [4, "9:2-9:31", $s$5], [2, "9:2-9:30", $s$5], [36, "10:1-10:1", $s$5], [16, "10:1-10:1", $s$5], [16, "10:1-10:1", $s$5]]);
$M.moduleExports();"
`;

exports[`default transpiler 3`] = `
""no-ctrl";

var $M = require("../../../api"),
  $x = $M.context,
  $ret = $M.ret,
  $unhandled = $M.unhandled,
  $brk = $M.brk,
  $mcall = $M.mcall,
  $m = $M.module("test/__fixtures__/transform/mod2.js", null, typeof module === "undefined" ? null : module, null, "$", {
    __webpack_require__: typeof __webpack_require__ !== "undefined" && __webpack_require__
  }, null),
  $s$1 = [{
    cnt: [1, "1:4-1:7"],
    A: [2, "3:9-3:10"],
    B: [3, "8:9-8:10"],
    f1: [4, "13:16-13:18"],
    f2: [5, "21:16-21:18"]
  }, null, 0],
  $s$2 = [{
    i: [1, "3:11-3:12"]
  }, $s$1, 1],
  $s$3 = [{
    i: [1, "8:11-8:12"]
  }, $s$1, 1],
  $s$4 = [{
    i: [1, "13:19-13:20"],
    a: [2, "16:8-16:9"]
  }, $s$1, 1],
  $s$5 = [{
    i: [1, "21:19-21:20"]
  }, $s$1, 1],
  $m$0 = $M.fun("m$0", "mod2.js", null, null, [], 0, 6, "1:0-25:0", 32, function ($, $l, $p) {
    for (;;) switch ($.state = $.goto) {
      case 0:
        $l[2 /*A*/] = $m$1($);
        $l[3 /*B*/] = $m$2($);
        $l[4 /*f1*/] = $m$3($);
        $l[5 /*f2*/] = $m$4($);
        module.exports.__esModule = true;
        module.exports.f1 = $l[4 /*f1*/];
        module.exports.f2 = $l[5 /*f2*/];
        $.goto = 1;
        $brk();
        $.state = 1;
      case 1:
        $l[1 /*cnt*/] = 0;
        $.goto = 3;
        continue;
      case 2:
        $.goto = 3;
        return $unhandled($.error);
      case 3:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 0, [[4, "1:0-1:12", $s$1], [0, "1:4-1:11", $s$1], [16, "25:0-25:0", $s$1], [16, "25:0-25:0", $s$1]]),
  $m$1 = $M.fun("m$1", "A", null, $m$0, ["i"], 0, 2, "3:0-6:1", 8, function ($, $l, $p) {
    for (;;) switch ($.state = $.goto) {
      case 0:
        $.goto = 1;
        $brk();
        $.state = 1;
      case 1:
        $.self.i = $l[1 /*i*/] * 10 + $l[0][1 /*cnt*/];
        $.goto = 2;
        $brk();
        $.state = 2;
      case 2:
        $.goto = 3;
        $p = new ($x.call = $l[0][3 /*B*/])(100);
        $.state = 3;
      case 3:
        $.self.b = $p;
        $.goto = 5;
        $brk();
        continue;
      case 4:
        $.goto = 5;
        return $unhandled($.error);
      case 5:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 1, [[4, "4:2-4:24", $s$2], [4, "5:2-5:22", $s$2], [2, "5:11-5:21", $s$2], [36, "6:1-6:1", $s$2], [16, "6:1-6:1", $s$2], [16, "6:1-6:1", $s$2]]),
  $m$2 = $M.fun("m$2", "B", null, $m$0, ["i"], 0, 2, "8:0-11:1", 8, function ($, $l, $p) {
    for (;;) switch ($.state = $.goto) {
      case 0:
        $.goto = 1;
        $brk();
        $.state = 1;
      case 1:
        $.self.i = $l[1 /*i*/];
        $.goto = 2;
        $brk();
        $.state = 2;
      case 2:
        $.result = {
          b: $.self,
          cnt: $l[0][1 /*cnt*/]
        };
        $.goto = 4;
        continue;
      case 3:
        $.goto = 4;
        return $unhandled($.error);
      case 4:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 1, [[4, "9:2-9:13", $s$3], [4, "10:2-10:26", $s$3], [0, "10:9-10:25", $s$3], [16, "11:1-11:1", $s$3], [16, "11:1-11:1", $s$3]]),
  $m$3 = $M.fun("m$3", "f1", null, $m$0, ["i"], 0, 3, "13:7-19:1", 0, function ($, $l, $p) {
    for (;;) switch ($.state = $.goto) {
      case 0:
        $.goto = 1;
        $brk();
        $.state = 1;
      case 1:
        $l[0][1 /*cnt*/] = $l[0][1 /*cnt*/] + 1;
        $.goto = 2;
        $brk();
        $.state = 2;
      case 2:
        $.goto = 3;
        $mcall("log", console, \`f1:\${$l[1 /*i*/]}@\${$l[0][1 /*cnt*/]}\`);
        $.state = 3;
      case 3:
        $.goto = 4;
        $brk();
        $.state = 4;
      case 4:
        $.goto = 5;
        $p = new ($x.call = $l[0][2 /*A*/])($l[0][1 /*cnt*/]);
        $.state = 5;
      case 5:
        $l[2 /*a*/] = $p;
        $.goto = 6;
        $brk();
        $.state = 6;
      case 6:
        $.goto = 7;
        $mcall("log", console, "A:", $l[2 /*a*/]);
        $.state = 7;
      case 7:
        $.goto = 8;
        $brk();
        $.state = 8;
      case 8:
        $.result = $l[0][1 /*cnt*/];
        $.goto = 10;
        continue;
      case 9:
        $.goto = 10;
        return $unhandled($.error);
      case 10:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 1, [[4, "14:2-14:8", $s$4], [4, "15:2-15:32", $s$4], [2, "15:2-15:31", $s$4], [4, "16:2-16:23", $s$4], [2, "16:12-16:22", $s$4], [4, "17:2-17:23", $s$4], [2, "17:2-17:22", $s$4], [4, "18:2-18:13", $s$4], [0, null, $s$4], [16, "19:1-19:1", $s$4], [16, "19:1-19:1", $s$4]]),
  $m$4 = $M.fun("m$4", "f2", null, $m$0, ["i"], 0, 2, "21:7-24:1", 0, function ($, $l, $p) {
    for (;;) switch ($.state = $.goto) {
      case 0:
        $.goto = 1;
        $brk();
        $.state = 1;
      case 1:
        $l[0][1 /*cnt*/] = $l[0][1 /*cnt*/] + 1;
        $.goto = 2;
        $brk();
        $.state = 2;
      case 2:
        $.goto = 3;
        $mcall("log", console, \`f2:\${$l[1 /*i*/]}@\${$l[0][1 /*cnt*/]}\`);
        $.state = 3;
      case 3:
        $.goto = 5;
        $brk();
        continue;
      case 4:
        $.goto = 5;
        return $unhandled($.error);
      case 5:
        return $ret($.result);
      default:
        throw new Error("Invalid state");
    }
  }, null, null, 1, [[4, "22:2-22:8", $s$5], [4, "23:2-23:32", $s$5], [2, "23:2-23:31", $s$5], [36, "24:1-24:1", $s$5], [16, "24:1-24:1", $s$5], [16, "24:1-24:1", $s$5]]);
$M.moduleExports();"
`;
